[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/AutoPatcher/AutoPatcher.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.517647, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.341176, 0.243137, 0.243137, 1 )

[node name="AutoPatcher" type="Node"]
script = ExtResource( 1 )

[node name="VersionHTTPRequest" type="HTTPRequest" parent="."]

[node name="DownloadHTTPRequest" type="HTTPRequest" parent="."]

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="UI"]
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="VBoxContainer" parent="UI"]
margin_left = 22.0
margin_top = 55.0
margin_right = 301.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLog" type="RichTextLabel" parent="UI/Separator"]
margin_right = 279.0
margin_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="VBoxContainer" parent="UI/Separator"]
visible = false
margin_top = 95.0
margin_right = 279.0
margin_bottom = 129.0

[node name="Value" type="Label" parent="UI/Separator/Download"]
margin_right = 279.0
margin_bottom = 14.0
text = "0.0MB / 10.0MB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="UI/Separator/Download"]
margin_top = 18.0
margin_right = 279.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateCheck" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="UpdateCheck" to="." method="_on_UpdateCheck_timeout"]
